# WorkTimer

./: .gitignore  CMakeLists.txt  README.md  build.bat  release.bat
installer/: WorkTimer.nsi
resources/: LICENSE.txt  app.rc
src/: main.cpp
